chore(): updating code

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "predev": "pnpm run delete-dev",
     "delete-dev12": "rm -rf ./reports ./artifacts ./log",
     "delete-dev": "rm -rf ./reports ./artifacts ./log ./visual-regression-baseline",
-    "dev": "node ./node_modules/OAF/index.js --disableReport --tags",
-    "dev1": "node ./node_modules/OAF/index.js --disableReport --browserOpen --tags",
-    "ltlocal": "node ./node_modules/OAF/index.js --disableReport --remoteService lambdatest --extraSettings",
+    "dev": "node ./node_modules/klassi-js/index.js --disableReport --tags",
+    "dev1": "node ./node_modules/klassi-js/index.js --disableReport --browserOpen --tags",
+    "ltlocal": "node ./node_modules/klassi-js/index.js --disableReport --remoteService lambdatest --extraSettings",
     "============================================": "=======================================================",
     "================ NOTE": "PLEASE DO NOT MAKE ANY CHANGES TO THE SCRIPTS BELOW THIS LINE ================",
     "===========================================": "========================================================",
@@ -27,13 +27,13 @@
     "changelog:patch": "standard-version --release-as patch --skip.commit --skip.tag",
     "changelog:minor": "standard-version --release-as minor --skip.commit --skip.tag",
     "changelog:major": "standard-version --release-as major --skip.commit --skip.tag",
-    "ciltuat": "node ./node_modules/OAF/index.js --disableReport --isCI --tags @regression --remoteService lambdatest --extraSettings",
-    "ciltdev": "node ./node_modules/OAF/index.js --disableReport --isCI --tags @integration --remoteService lambdatest --extraSettings",
-    "cilts3r": "node ./node_modules/OAF/index.js --disableReport --tags @s3 --remoteService lambdatest --extraSettings",
-    "cilts3load": "node ./node_modules/OAF/index.js --disableReport --tags @s3load --remoteService lambdatest --extraSettings"
+    "ciltuat": "node ./node_modules/klassi-js/index.js --disableReport --isCI --tags @regression --remoteService lambdatest --extraSettings",
+    "ciltdev": "node ./node_modules/klassi-js/index.js --disableReport --isCI --tags @integration --remoteService lambdatest --extraSettings",
+    "cilts3r": "node ./node_modules/klassi-js/index.js --disableReport --tags @s3 --remoteService lambdatest --extraSettings",
+    "cilts3load": "node ./node_modules/klassi-js/index.js --disableReport --tags @s3load --remoteService lambdatest --extraSettings"
   },
   "dependencies": {
-    "OAF": "github:klassijs/klassi-js#feature/phase0",
+    "klassi-js": "github:klassijs/klassi-js#feature/phase00",
     "klassijs-assertion-tool": "github:klassijs/klassijs-assertion-tool",
     "klassijs-avt-service": "github:klassijs/klassijs-avt-service",
     "klassijs-ocr-service": "github:klassijs/klassijs-ocr-service",
